@@ -61,4 +61,3 @@ pkgbase = kopano-core-git
 	md5sums = SKIP
 
 pkgname = kopano-core-git
-
